# ai-agent-platform

./: .codex-temp-index  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260610_0001_create_agent_and_audit_tables.py  20260611_0002_create_knowledge_tables.py  20260611_0003_create_tool_tables.py  20260611_0004_create_evaluation_tables.py  20260611_0005_create_trace_tables.py  20260611_0006_create_model_provider_tables.py  20260612_0006_add_agent_model_policy.py  20260612_0007_drop_agent_model_policy.py  20260616_0007_create_workflow_tables.py  20260623_0008_add_run_summary_fields.py  20260624_0009_add_model_provider_purpose.py  20260625_0010_extend_knowledge_base_config.py  (+3 more)
apps/api/app/: main.py
apps/api/tests/: conftest.py  test_agent_repository.py  test_agent_routes.py  test_agent_run_model_flow.py  test_agent_run_routes.py  test_dashboard_routes.py  test_database.py  test_database_models.py  test_evaluation_repository.py  test_evaluation_routes.py  test_frontend_contract.py  test_health.py  test_knowledge_repository.py  test_knowledge_routes.py  test_model_provider_routes.py  test_model_provider_streaming.py  test_p0_resource_contract.py  test_p0_routes.py  test_release_gate_aggregation.py  test_release_gate_service.py  test_tool_repository.py  test_tool_routes.py  test_trace_repository.py  test_workflow_graph_execution.py  test_workflow_graph_validator.py  test_workflow_node_registry.py  test_workflow_repository.py  test_workflow_routes.py
(+192 files in other folders)
